[package]
name = "iter_all"
version = "0.1.0"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Iterate trough all enum cases"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/refs"
repository = "https://github.com/VladasZ/refs"

[lib]
name = "iter_all"
crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
log = "0.4.17"

[dev-dependencies]
serial_test = "2.0.0"
