[package]
name = "iter_all_proc"
version = "0.1.1"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Iterate all enum vases"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/iter_all"
repository = "https://github.com/VladasZ/iter_all"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

