[package]
name = "iter_all_proc"
version = "0.1.5"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Iterate all enum vases"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/iter_all"
repository = "https://github.com/VladasZ/iter_all"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0.18", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.59"

